src/filesystem/root/etc/iptables.rules
# Generated by iptables-save v1.4.14 on Thu Sep 18 18:33:56 2014
*filter
:INPUT ACCEPT [246:48776]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3:284]
-A FORWARD -i eth0 -j ACCEPT
-A FORWARD -i wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan2 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan3 -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Thu Sep 18 18:33:56 2014
# Generated by iptables-save v1.4.14 on Thu Sep 18 18:33:56 2014
*nat
:PREROUTING ACCEPT [927:109538]
:INPUT ACCEPT [116:25344]
:OUTPUT ACCEPT [1:76]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o wlan0 -j SNAT --to-source 192.168.42.1
-A POSTROUTING -o wlan1 -j SNAT --to-source 192.168.43.1
-A POSTROUTING -o wlan2 -j SNAT --to-source 192.168.44.1
-A POSTROUTING -o wlan3 -j SNAT --to-source 192.168.45.1
COMMIT
# Completed on Thu Sep 18 18:33:56
